--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -96,6 +96,7 @@
                             <option value="ROLE_PARENT">Parent</option>
                             <option value="ROLE_EDUCATOR">Éducateur</option>
                             <option value="ROLE_KITCHEN">Personnel de cuisine</option>
+                            <option value="ROLE_ADMIN">Administrateur</option>
                         </select>
                     </div>
                     
